--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: Poppins, sans-serif;
+  background: #ff0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.login {
+  text-align: center;
+  width: 350px;
+  box-sizing: border-box;
+  padding: 40px;
+  background: #fff;
+}
+
+.login h2 {
+  font-size: 30px;
+  margin: 0 0 20px;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.login .input-group {
+  position: relative;
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+.login .input-group input {
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  font-size: 18px;
+  outline: none;
+  border: 1px solid #000;
+  padding-left: 20px;
+}
+
+.login .input-group span {
+  position: absolute;
+  top: 12px;
+  left: 20px;
+  padding: 0;
+  transition: 0.5s;
+  pointer-events: none;
+  background: #fff;
+  text-transform: uppercase;
+}
+
+.login .input-group input:valid ~ span,
+.login .input-group input:focus ~ span {
+  top: -12px;
+  left: 20px;
+  font-size: 12px;
+  padding: 2px 4px;
+  border: 1px solid #000;
+  background: #ff0;
+}
+
+.login .input-group input[type="submit"]{
+  background: #ff0;
+  border: none;
+  box-shadow: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.login .input-group input[type="submit"]:hover {
+  background: #ffc107;
+}
+
+.login a {
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  color: #666;
+}
+
+.login a span {
+  font-weight: 600;
+  color: #262626;
 }
